# algorand-guestbook

./: .algokit.toml  README.md  guestbook_app.code-workspace  opencode.json
.algokit/: .copier-answers.yml
projects/guestbook_app-contracts/: .algokit.toml  README.md  pyproject.toml
projects/guestbook_app-contracts/.algokit/: .copier-answers.yml
projects/guestbook_app-contracts/smart_contracts/artifacts/guestbook_app_contract/: GuestbookAppContract.approval.puya.map  GuestbookAppContract.approval.teal  guestbook_app_contract_client.py
projects/guestbook_app-contracts/smart_contracts/guestbook_app_contract/: contract.py  deploy_config.py
projects/guestbook_app-contracts/tests/: test_guestbook_contract.py
projects/guestbook_app-frontend/: .algokit.toml  README.md  index.html  package-lock.json  package.json
projects/guestbook_app-frontend/.algokit/: .copier-answers.yml
projects/guestbook_app-frontend/src/: Home.tsx  vite-env.d.ts
projects/guestbook_app-frontend/src/components/: Account.tsx  AppCalls.tsx  ConnectWallet.tsx  GuestbookMessages.tsx  Transact.tsx
projects/guestbook_app-frontend/src/contracts/: GuestbookAppContract.ts
projects/guestbook_app-frontend/src/styles/: App.css
